Added styling for the pokemon and type sections

--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@
     <section id="type-section">
 
         <div id="type-div-1" class="type-div">
-            <h3>Type 1</h3>
+            <h3>Type 1:</h3>
             <p>Type</p>
             <!--<img src="#" alt="type-icon-1">-->
         </div>
 
         <div id="type-div-2" class="type-div">
-            <h3>Type 2</h3>
+            <h3>Type 2:</h3>
             <p>Type</p>
             <!--<img src="#" alt="type-icon-2">-->
         </div>
