Added event listener to the randomize button and began work on API fetch

--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
 
     <section id="button-section">
 
-        <button>Randomize</button>
+        <button id="randomize-button">Randomize</button>
 
     </section>
 
-    
+    <script src="assets/javascript/script.js"></script>
 </body>
 </html>
