--- a/index.html
+++ b/index.html
@@ -19,20 +19,24 @@
 
         <section id="instructions-section" class="row">
             <div class="col-12 col-md-10">
-                <h2 class="text-center">Instructions</h2>
-                <p id="instructions" class="text-center mx-auto col-12 col-lg-6 bg-light shadow p-2 rounded">
-                    Welcome to Pokemon Generator!
-                    <br><br>
-                    Click the "Randomize" button below to generate a random pokemon.
-                    Its number will appear in the box labeled "Pokemon."
-                    <br><br>
-                    The button will also generate two random types for the pokemon, which can 
-                    be used as a prompt to reimagine and draw that pokemon as one or both of those
-                    new types.
-                    <br><br>
-                    If the original pokemon has only one type, feel free to use only one of the 
-                    randomly-generated types when you draw the new version of the pokemon.
-                </p>    
+                <h2 class="text-center">
+                    <a class="btn btn-secondary shadow-sm" data-toggle="collapse" role="button" aria-expanded="false" aria-controls="collapseExample" href="#collapse-instructions">Instructions</a>
+                </h2>
+                <div class="collapse" id="collapse-instructions">
+                    <p id="instructions" class="text-center mx-auto col-12 col-lg-6 bg-light shadow p-2 rounded">
+                        Welcome to Pokemon Generator!
+                        <br><br>
+                        Click the "Randomize" button below to generate a random pokemon.
+                        Its number will appear in the box labeled "Pokemon."
+                        <br><br>
+                        The button will also generate two random types for the pokemon, which can 
+                        be used as a prompt to reimagine and draw that pokemon as one or both of those
+                        new types.
+                        <br><br>
+                        If the original pokemon has only one type, feel free to use only one of the 
+                        randomly-generated types when you draw the new version of the pokemon.
+                    </p> 
+                </div>   
             </div>
         </section>
 
