Added ability to show and replace sprites images

--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
         <!--Pokemon Section-->
         <section id="pokemon-section" class="row vh-50">
             <div class="col-12 col-lg-10 d-flex flex-column align-items-center">
-                <h2>Pokemon</h2>
-                <div id="pokemon-img-container" class="border border-secondary rounded mb-4" style="height: 20vh; width: 80%;"></div>
+                <h2 id="pokemon-title">Pokemon</h2>
+                <div id="pokemon-img-container" class="d-flex align-items-center justify-content-center border border-secondary rounded mb-4" style="height: 20vh; width: 80%;"></div>
             </div>
         </section>
 
