Updated the instructions to reflect the page redesign

--- a/index.html
+++ b/index.html
@@ -27,14 +27,10 @@
                         Welcome to Pokemon Generator!
                         <br><br>
                         Click the "Randomize" button below to generate a random pokemon.
-                        Its number will appear in the box labeled "Pokemon."
+                        Its sprite will appear below the box labeled "Pokemon."
                         <br><br>
-                        The button will also generate two random types for the pokemon, which can 
-                        be used as a prompt to reimagine and draw that pokemon as one or both of those
-                        new types.
-                        <br><br>
-                        If the original pokemon has only one type, feel free to use only one of the 
-                        randomly-generated types when you draw the new version of the pokemon.
+                        The button will also generate new type(s) for the pokemon, which can 
+                        be used as a prompt to reimagine and draw that pokemon.
                     </p> 
                 </div>   
             </div>
