Fixed misaligned components and replaced hero-img with larger file for desktops

--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
 <body>
 
     <header class="row">
-        <img src="./assets/images/pokemon-hero-image.jpg" class="img-fluid" alt="Pokemon Generator">
+        <img id="hero-img" src="./assets/images/pokemon-hero-image-2.jpg" class="img-fluid" alt="Pokemon Generator">
         <h1 class="text-center font-weight-bold text-warning bg-primary col-12">Pokemon Generator</h1>
     </header>
 
     <main class="container">
 
         <section id="instructions-section" class="row">
-            <div class="col-12 col-md-10">
+            <div class="col-12 col-md-10 mx-auto">
                 <h2 class="text-center">
                     <a class="btn btn-secondary shadow-sm" data-toggle="collapse" role="button" aria-expanded="false" aria-controls="collapseExample" href="#collapse-instructions">Instructions</a>
                 </h2>
@@ -38,7 +38,7 @@
 
         <!--Pokemon Section-->
         <section id="pokemon-section" class="row vh-50">
-            <div class="col-12 col-lg-10 d-flex flex-column align-items-center">
+            <div class="col-12 col-lg-10 d-flex flex-column align-items-center mx-auto">
                 <h2 id="pokemon-title">Pokemon</h2>
                 <div id="pokemon-img-container" class="d-flex align-items-center justify-content-center border border-secondary rounded mb-4" style="height: 20vh; width: 80%;"></div>
             </div>
